# fastapi-poetry-practice

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  authentication.py  crud.py  database.py  models.py  schemas.py  util_user.py
app/api/: routes.py  server.py
app/core/: config.py  event_handler.py
app/databases/: tasks.py
app/services/: __init__.py  authentication.py
tests/: test_fastapi_starter.py
